# snip20-ics20

./: .gitignore  Cargo.toml  Makefile  README.md
src/: amount.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
test/: docker-compose.yml  package.json  test.ts  utils.ts
